<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMeFragment">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto"
        android:text="@string/settingsContentDescription"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/about_me_title"
        style="@style/menuLeft"
        android:layout_width="280dp"
        android:layout_height="42dp"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_title">

        <RelativeLayout
            android:id="@+id/about_me_title_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/about_me"
                android:fontFamily="@font/roboto"
                android:text="@string/about_me"
                android:textSize="25sp" />


        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        style="@style/menuRight"
        android:layout_width="320dp"
        android:layout_height="405dp"

        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_me_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/choose_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="4dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/male_button"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:background="@drawable/radio_button_left_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:shadowRadius="10"
                    android:text="@string/male"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/female_button"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:background="@drawable/radio_button_right_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:shadowRadius="10"
                    android:text="@string/female"
                    android:textColor="@color/black" />

            </RadioGroup>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_name_layout"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="4dp"
                android:hint="@string/name_hint"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_gender">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPersonName"
                    app:prefixText="@string/name_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_height_layout"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="4dp"
                android:hint="@string/height_hint"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_name_layout"
                app:suffixText="@string/height_suffix">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_height"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="number"
                    app:prefixText="@string/height_hint" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_weight_layout"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="4dp"
                android:hint="@string/weight_hint"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_height_layout"
                app:suffixText="@string/weight_suffix">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_weight"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="number"
                    app:prefixText="@string/weight_hint" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_birthday_layout"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="4dp"
                android:hint="@string/birthday_hint"
                app:boxBackgroundColor="@color/white"
                app:endIconContentDescription="@string/birthday_hint"
                app:endIconDrawable="@drawable/calendar"
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_weight_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_settings"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/secondMenuIconColor"
                android:fontFamily="@font/roboto"
                android:text="@string/save_settings"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_birthday_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
    


</androidx.constraintlayout.widget.ConstraintLayout>