<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    tools:context=".Registration.SpecifyParametersActivity">

    <ImageView
        android:id="@+id/parameters_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_green_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_height_layout"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:elevation="4dp"
        android:hint="@string/height_hint"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parameters_logo"
        app:suffixText="@string/height_suffix">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:prefixText="@string/height_hint" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_weight_layout"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:elevation="4dp"
        android:hint="@string/weight_hint"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_height_layout"
        app:suffixText="@string/weight_suffix">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_weight"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="number"
            app:prefixText="@string/weight_hint" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_birthday_layout"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:elevation="4dp"
        android:hint="@string/birthday_hint"
        app:endIconContentDescription="@string/birthday_hint"
        app:endIconDrawable="@drawable/calendar"
        app:endIconMode="custom"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_weight_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_birthday_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>