<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationPhysiqueFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        app:trackColor="@color/firstMenuIconColor"
        app:indicatorColor="@color/white"
        app:trackThickness="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:progress="45"
        />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/your_goal_card"
        style="@style/menuRight"
        android:layout_width="280dp"
        android:layout_height="140dp"
        android:layout_marginTop="155dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Tell us more!"
                android:textColor="@color/black"
                android:textSize="25sp" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/physique_card"
        style="@style/menuLeft"
        android:layout_width="280dp"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_goal_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/specify_age"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:elevation="4dp"
                android:hint="@string/birthday_hint"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_input_age"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPersonName"
                    app:prefixText="@string/name_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/specify_height"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="4dp"
                android:hint="@string/height_hint"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/specify_age"
                app:suffixText="@string/height_suffix">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_input_height"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="number"
                    app:prefixText="@string/name_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/specify_weight"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"
                android:elevation="4dp"
                android:hint="@string/weight_hint"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/specify_height"
                app:suffixText="@string/weight_suffix">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_input_weight"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="number"
                    app:prefixText="@string/name_hint" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>